PR java/8260 * coverage.c: Use get_gcov_unsigned_t() instead of unsigned_type_node all over.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113512 138bc75d-0d04-0410-961f-82ee72b054a4